<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperPedometer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yourHeight">Height:</string>
    <string name="yourWeight">Weight:</string>
    <string name="feet">Feet:</string>
    <string name="inches">Inches:</string>
    <string name="submit">Submit</string>
    <string name="mainText">Number of Steps</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="btn_display">Display</string>

</resources>
